@@ -1,3 +1,8 @@
+2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>
+
+	* gnobots.c
+	* graphics.c: Vaya con dios imlib.
+
 2001-07-05  Christian Rose  <menthos@menthos.com>
 
 	* gnobots2.desktop: Modified Swedish entries.
